--- a/src/main/resources/templates/authorsPage.html
+++ b/src/main/resources/templates/authorsPage.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Authors</title>
+    <link rel = "icon" type="images/x-icon" href="/icon/book.png">
 </head>
 <style>
     body {
@@ -57,14 +58,58 @@
         color: #fff;
         padding: 20px;
         text-align: center;
-        margin-top: 620px;
+        margin-top: 320px;
     }
 
+    .authors-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
 
+    .author-row {
+        flex: 0 0 calc(39% - 5px);
+    }
+
+    .author-card {
+        background-color: #f9f9f9;
+        padding: 10px;
+        border: 1px solid #ddd;
+        width: calc(50% - 5px);
+        border-radius: 5px;
+        margin: 0 10px 20px 0;
+    }
+    .button-container {
+        display: flex;
+    }
+
+    .button-container form {
+        margin-right: 10px;
+    }
+
+    nav li a {
+        position: relative;
+    }
+
+    nav li a::after {
+        content: '';
+        position: absolute;
+        bottom: -5px;
+        left: 0;
+        width: 100%;
+        height: 5px;
+        background-color: transparent;
+        border-radius: 10px;
+        transition: background-color 0.3s ease;
+    }
+
+    nav li a:hover::after {
+        background-color: white;
+    }
 </style>
 <body>
 <header>
-    <h1>All authors</h1>
+    <h1><img src="/icon/author.png" alt="Author Icon">All authors</h1>
     <nav>
         <ul>
             <li><a href="/library/home">Home</a></li>
@@ -75,18 +120,22 @@
 <main>
     <h2>All authors</h2>
 
-    <tbody>
-    <tr th:each="author : ${authors}">
-        <br>
-        <td th:text="${author.getNameAuthor()}"></td>
-        <form th:method="POST" th:action="@{/library/deleteAuthor/{id}(id=${author.getId()})}">
-            <input type="submit" value="Delete">
-        </form>
-        <form th:method="GET" th:action="@{/library/changeAuthor/{id}(id=${author.getId()})}">
-            <input type="submit" value="Change">
-        </form>
-    </tr>
-    </tbody>
+    <div class="authors-container">
+        <div class="author-row" th:each="author : ${authors}">
+            <div class="author-card">
+                <img th:src="@{${author.getPhoto()}}" width="150" height="200"/>
+                <div th:text="${author.getNameAuthor()}"></div>
+                <div class="button-container">
+                    <form th:method="GET" th:action="@{/library/changeAuthor/{id}(id=${author.getId()})}" style="display: inline-block;">
+                        <input type="submit" value="Change" style="background-color: #4e8f2b; color: #fff;padding: 8px 15px;border: none; cursor: pointer; border-radius: 5px;">
+                    </form>
+                    <form th:method="POST" th:action="@{/library/deleteAuthor/{id}(id=${author.getId()})}" style="display: inline-block; padding-right: 20px;">
+                        <input type="submit" value="Delete" style="background-color: #d9534f; color: #fff;padding: 8px 15px;border: none; cursor: pointer;border-radius: 5px;">
+                    </form>
+                </div>
+        </div>
+        </div>
+    </div>
 
 </main>
 <footer>
