--- a/src/main/resources/templates/startPage.html
+++ b/src/main/resources/templates/startPage.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Library</title>
+    <link rel="icon" type="images/x-icon" href="/icon/book.png">
 </head>
 <style>
     body {
@@ -15,6 +16,8 @@
         background-color: #333;
         color: #fff;
         padding: 20px;
+        position: relative;
+        margin-bottom: 600px; /* Добавляем нижний отступ */
     }
 
     nav ul {
@@ -35,8 +38,10 @@
 
     main {
         max-width: 800px;
-        margin: 20px auto;
+        margin: 0 auto; /* Изменено для выравнивания по центру */
         padding: 0 20px;
+        margin-top: 600px; /* Добавляем верхний отступ */
+        margin-bottom: 600px; /* Добавляем нижний отступ */
     }
 
     section {
@@ -57,14 +62,48 @@
         color: #fff;
         padding: 20px;
         text-align: center;
-        margin-top: 620px;
     }
 
+    nav li a {
+        position: relative;
+    }
 
+    nav li a::after {
+        content: '';
+        position: absolute;
+        bottom: -5px;
+        left: 0;
+        width: 100%;
+        height: 5px;
+        background-color: transparent;
+        border-radius: 10px;
+        transition: background-color 0.3s ease;
+    }
+
+    nav li a:hover::after {
+        background-color: white;
+    }
+
+    .login-button {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        color: white;
+        text-decoration: none;
+        padding: 10px 20px;
+        background-color: #4caf50;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+    }
+
+    .login-button:hover {
+        background-color: #45a049;
+    }
 </style>
 <body>
 <header>
-    <h1>Welcome to library!</h1>
+    <h1><img src="/icon/library.png">Welcome to library!</h1>
+    <a href="/library/login" class="login-button">Sign in</a>
     <nav>
         <ul>
             <li><a href="/library/home">Home</a></li>
