--- a/src/main/resources/templates/updateAuthor.html
+++ b/src/main/resources/templates/updateAuthor.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Title</title>
+    <link rel = "icon" type="images/x-icon" href="/icon/book.png">
 </head>
 <style>
     body {
@@ -59,13 +60,32 @@
         text-align: center;
         margin-top: 620px;
     }
+    nav li a {
+        position: relative;
+    }
+
+    nav li a::after {
+        content: '';
+        position: absolute;
+        bottom: -5px;
+        left: 0;
+        width: 100%;
+        height: 5px;
+        background-color: transparent;
+        border-radius: 10px;
+        transition: background-color 0.3s ease;
+    }
+
+    nav li a:hover::after {
+        background-color: white;
+    }
 </style>
 <body>
 <header>
     <h1>Update book</h1>
     <nav>
         <ul>
-            <li><a href="/library/books">Show Books</a></li>
+            <li><a href="/library/authors">Show Authors</a></li>
         </ul>
     </nav>
 </header>
