--- a/src/main/resources/templates/updateBook.html
+++ b/src/main/resources/templates/updateBook.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Title</title>
+    <link rel = "icon" type="images/x-icon" href="/icon/book.png">
 </head>
 <style>
     body {
@@ -59,6 +60,25 @@
         text-align: center;
         margin-top: 620px;
     }
+    nav li a {
+        position: relative;
+    }
+
+    nav li a::after {
+        content: '';
+        position: absolute;
+        bottom: -5px;
+        left: 0;
+        width: 100%;
+        height: 5px;
+        background-color: transparent;
+        border-radius: 10px;
+        transition: background-color 0.3s ease;
+    }
+
+    nav li a:hover::after {
+        background-color: white;
+    }
 </style>
 <body>
 <header>
@@ -72,8 +92,8 @@
 <main>
     <form th:action="@{/library/changeBook/{id}(id=${book.getId()})}" method="POST" th:object = "${book}">
         <label style="font-weight: bold">Author name:</label>
-        <select id="mySelect" name="selectedValue" th:field="*{nameAuthorOfBook}">
-            <option th:each="author : ${authors}" th:value="${author.getNameAuthor()}" th:text="${author.getNameAuthor()}"></option>
+        <select id="mySelect" name="authorName">
+            <option th:each="author : ${authors}" th:value="${author.nameAuthor}" th:text="${author.nameAuthor}"></option>
         </select>
         <br>
         <label style="font-weight: bold">Book name:</label>
