--- a/src/main/resources/templates/authorsPage.html
+++ b/src/main/resources/templates/authorsPage.html
@@ -3,19 +3,26 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Authors</title>
-    <link rel = "icon" type="images/x-icon" href="/icon/book.png">
+    <link rel="icon" type="images/x-icon" href="/icon/book.png">
 </head>
 <style>
     body {
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
+        background-image: url('/icon/authorsBack.jpeg');
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+        color: #333;
     }
 
     header {
-        background-color: #333;
+        background-color: rgba(51, 51, 51, 0.9);
         color: #fff;
         padding: 20px;
+        position: relative;
+        margin-bottom: 50px;
     }
 
     nav ul {
@@ -32,62 +39,6 @@
     nav li a {
         color: #fff;
         text-decoration: none;
-    }
-
-    main {
-        max-width: 800px;
-        margin: 20px auto;
-        padding: 0 20px;
-    }
-
-    section {
-        margin-bottom: 30px;
-    }
-
-    section h2 {
-        font-size: 24px;
-        margin-bottom: 10px;
-    }
-
-    section ul {
-        margin-left: 20px;
-    }
-
-    footer {
-        background-color: #333;
-        color: #fff;
-        padding: 20px;
-        text-align: center;
-        margin-top: 320px;
-    }
-
-    .authors-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: flex-start;
-    }
-
-    .author-row {
-        flex: 0 0 calc(39% - 5px);
-    }
-
-    .author-card {
-        background-color: #f9f9f9;
-        padding: 10px;
-        border: 1px solid #ddd;
-        width: calc(50% - 5px);
-        border-radius: 5px;
-        margin: 0 10px 20px 0;
-    }
-    .button-container {
-        display: flex;
-    }
-
-    .button-container form {
-        margin-right: 10px;
-    }
-
-    nav li a {
         position: relative;
     }
 
@@ -106,40 +57,131 @@
     nav li a:hover::after {
         background-color: white;
     }
+
+    .user-icon {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
+
+    .login-button {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        color: white;
+        text-decoration: none;
+        padding: 10px 20px;
+        background-color: #4caf50;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+    }
+
+    .login-button:hover {
+        background-color: #45a049;
+    }
+
+    main {
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+        background-color: rgba(255, 255, 255, 0.9);
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    section {
+        margin-bottom: 30px;
+    }
+
+    section h2 {
+        font-size: 24px;
+        margin-bottom: 10px;
+        border-bottom: 2px solid #4caf50;
+        padding-bottom: 5px;
+    }
+
+    .authors-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .author-row {
+        flex: 0 0 calc(39% - 5px);
+    }
+
+    .author-card {
+        background-color: #fafafa;
+        padding: 10px;
+        border: 1px solid #ccc;
+        width: calc(50% - 5px);
+        border-radius: 5px;
+        margin: 0 10px 20px 0;
+    }
+
+    .button-container {
+        display: flex;
+    }
+
+    .button-container form {
+        margin-right: 10px;
+    }
+
+    footer {
+        background-color: rgba(51, 51, 51, 0.9);
+        color: #fff;
+        margin-top: 40px;
+        padding: 20px;
+        text-align: center;
+    }
+
 </style>
 <body>
 <header>
     <h1><img src="/icon/author.png" alt="Author Icon">All authors</h1>
+    <div th:if="${loggedIn}">
+        <a th:href="@{/account/info}">
+            <img th:src="@{/icon/user.png}" alt="User Icon" class="user-icon">
+        </a>
+    </div>
+    <div th:unless="${loggedIn}">
+        <a th:href="@{/library/login}" class="login-button">Sign in</a>
+    </div>
     <nav>
         <ul>
             <li><a href="/library/home">Home</a></li>
-            <li><a href="/library/newAuthor">Add New Author</a></li>
+            <li th:if="${authority}">
+                <a href="/library/newAuthor">Add New Author</a>
+            </li>
         </ul>
     </nav>
 </header>
 <main>
     <h2>All authors</h2>
-
     <div class="authors-container">
         <div class="author-row" th:each="author : ${authors}">
             <div class="author-card">
-                <img th:src="@{${author.getPhoto()}}" width="150" height="200"/>
-                <div th:text="${author.getNameAuthor()}"></div>
-                <div class="button-container">
-                    <form th:method="GET" th:action="@{/library/changeAuthor/{id}(id=${author.getId()})}" style="display: inline-block;">
-                        <input type="submit" value="Change" style="background-color: #4e8f2b; color: #fff;padding: 8px 15px;border: none; cursor: pointer; border-radius: 5px;">
-                    </form>
-                    <form th:method="POST" th:action="@{/library/deleteAuthor/{id}(id=${author.getId()})}" style="display: inline-block; padding-right: 20px;">
-                        <input type="submit" value="Delete" style="background-color: #d9534f; color: #fff;padding: 8px 15px;border: none; cursor: pointer;border-radius: 5px;">
-                    </form>
-                </div>
-        </div>
+                <a th:href="@{/library/viewAuthor/{id}(id=${author.getId()})}" style="text-decoration: none;">
+                    <img th:src="@{${author.getBase64Image(author.getPhoto())}}" width="150" height="200"/>
+                    <div th:text="${author.getNameAuthor()}"></div>
+                    <div th:if="${authority}">
+                        <div class="button-container">
+                            <form th:method="GET" th:action="@{/library/changeAuthor/{id}(id=${author.getId()})}" style="display: inline-block;">
+                                <input type="submit" value="Change" style="background-color: #4e8f2b; color: #fff;padding: 8px 15px;border: none; cursor: pointer; border-radius: 5px;">
+                            </form>
+                            <form th:method="POST" th:action="@{/library/deleteAuthor/{id}(id=${author.getId()})}" style="display: inline-block; padding-right: 20px;">
+                                <input type="submit" value="Delete" style="background-color: #d9534f; color: #fff;padding: 8px 15px;border: none; cursor: pointer;border-radius: 5px;">
+                            </form>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
 
 </main>
 <footer>
-    <p>&copy; 2023 My Website. All rights reserved.</p>
+    <p>&copy; 2023 Library Website. All rights reserved.</p>
 </footer>
 </body>
 </html>
