--- a/src/main/resources/templates/booksPage.html
+++ b/src/main/resources/templates/booksPage.html
@@ -2,20 +2,27 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Authors</title>
-    <link rel = "icon" type="images/x-icon" href="/icon/book.png">
+    <title>Books</title>
+    <link rel="icon" type="images/x-icon" href="/icon/book.png">
 </head>
 <style>
     body {
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
+        background-image: url('/icon/booksBack.jpg');
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+        color: #333;
     }
 
     header {
-        background-color: #333;
+        background-color: rgba(51, 51, 51, 0.9);
         color: #fff;
         padding: 20px;
+        position: relative;
+        margin-bottom: 50px;
     }
 
     nav ul {
@@ -36,8 +43,11 @@
 
     main {
         max-width: 800px;
-        margin: 20px auto;
-        padding: 0 20px;
+        margin: 0 auto;
+        padding: 20px;
+        background-color: rgba(255, 255, 255, 0.9);
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
 
     section {
@@ -47,18 +57,56 @@
     section h2 {
         font-size: 24px;
         margin-bottom: 10px;
+        border-bottom: 2px solid #4caf50;
+        padding-bottom: 5px;
     }
 
-    section ul {
-        margin-left: 20px;
+    .authors-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .book-row {
+        flex: 0 0 calc(39% - 5px);
+    }
+
+    .book-card {
+        background-color: #fafafa;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        margin: 0 10px 20px 0;
+        width: calc(55% - 10px);
+    }
+
+    .button-container {
+        display: flex;
+    }
+
+    .button-container form {
+        margin-right: 10px;
+    }
+
+    .button-container input[type="submit"] {
+        background-color: #4e8f2b;
+        color: #fff;
+        padding: 8px 15px;
+        border: none;
+        cursor: pointer;
+        border-radius: 5px;
+    }
+
+    .button-container input[type="submit"]:hover {
+        background-color: #45a049;
     }
 
     footer {
-        background-color: #333;
+        background-color: rgba(51, 51, 51, 0.9);
         color: #fff;
         padding: 20px;
+        margin-top: 40px;
         text-align: center;
-        margin-top: 320px;
     }
 
     nav li a {
@@ -80,48 +128,130 @@
     nav li a:hover::after {
         background-color: white;
     }
+
+    .user-icon {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
+
+    .login-button {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        color: white;
+        text-decoration: none;
+        padding: 10px 20px;
+        background-color: #4caf50;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+    }
+
+    .login-button:hover {
+        background-color: #45a049;
+    }
+
+    .search-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+
+    .search-form {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 10px;
+    }
+
+    .search-form input[type="text"] {
+        width: 200px;
+        padding: 8px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
+
+    .search-form button {
+        padding: 8px 15px;
+        background-color: #4caf50;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+
+    .search-form button:hover {
+        background-color: #45a049;
+    }
+
+    h2.centered-heading {
+        justify-content: center;
+        margin-bottom: 10px;
+        margin-left: 100px;
+    }
 </style>
 <body>
 <header>
-    <h1><img src="/icon/books.png" alt="Library Icon">All books</h1>
+    <h1><img src="/icon/books.png" alt="Author Icon">All books</h1>
+    <div th:if="${loggedIn}">
+        <a th:href="@{/account/info}">
+            <img th:src="@{/icon/user.png}" alt="User Icon" class="user-icon">
+        </a>
+    </div>
+    <div th:unless="${loggedIn}">
+        <a th:href="@{/library/login}" class="login-button">Sign in</a>
+    </div>
     <nav>
         <ul>
             <li><a href="/library/home">Home</a></li>
-            <li><a href="/library/newBook">Add New Book</a></li>
+            <li th:if="${authority}">
+                <a href="/library/newBook">Add New Book</a>
+            </li>
         </ul>
     </nav>
 </header>
 <main>
-    <h2>All books</h2>
-
-    <tbody>
-    <tr th:each="book : ${books}">
-        <br>
-        <div style="font-weight: bold">Author:</div>
-        <td th:text="${book.getNameAuthorOfBook().getNameAuthor()}"></td>
-        <br>
-        <div style="font-weight: bold">Name book:</div>
-        <td th:text="${book.getNameBook()}"></td>
-        <br>
-        <div style="font-weight: bold">Year release:</div>
-        <td th:text="${book.getYearRelease()}"></td>
-        <br>
-        <div style="font-weight: bold">Amount:</div>
-        <td th:text="${book.getAmount()}"></td>
-        <br>
-        <form th:method="GET" th:action="@{/library/changeBook/{id}(id=${book.getId()})}" style="display: inline-block;">
-            <input type="submit" value="Change" style="background-color: #4e8f2b; color: #fff; padding: 8px 15px; border: none; cursor: pointer; border-radius: 5px;">
+    <div class="search-form">
+        <form th:action="@{/library/search}" method="GET">
+            <input type="text"  name="title" placeholder="Search by book title...">
+            <button type="submit">Search</button>
         </form>
-        <form th:method="POST" th:action="@{/library/deleteBook/{id}(id=${book.getId()})}" style="display: inline-block; padding-right: 20px;">
-            <input type="submit" value="Delete" style="background-color: #d9534f; color: #fff; padding: 8px 15px; border: none; cursor: pointer; border-radius: 5px;">
-        </form>
-        <br>
-    </tr>
-    </tbody>
+    </div>
 
+    <h2 class="centered-heading">All books</h2>
+
+    <div class="authors-container">
+        <div class="book-row" th:each="book : ${books}">
+            <div class="book-card">
+                <a th:href="@{/library/viewBook/{id}(id=${book.getId()})}" style="text-decoration: none; color: inherit;">
+                    <img th:src="@{${book.getBase64Image(book.getCover())}}" width="150" height="200"/>
+                    <div style="font-weight: bold">Name book:</div>
+                    <div th:text="${book.getNameBook()}"></div>
+                    <div style="font-weight: bold">Author:</div>
+                    <div th:text="${book.getNameAuthorOfBook().getNameAuthor()}"></div>
+                    <div style="font-weight: bold">Rating:</div>
+                    <div style="display: flex; align-items: center;">
+                        <div th:text="${book.getBookRating()}" style="margin-top: 5px;"></div>
+                        <img th:src="@{/icon/star.png}" alt="Star Icon" style="vertical-align: middle;margin-left: 3px">
+                    </div>
+                    <div th:if="${authority}">
+                        <div class="button-container">
+                            <form th:method="GET" th:action="@{/library/changeBook/{id}(id=${book.getId()})}" style="display: inline-block;">
+                                <input type="submit" value="Change" style="background-color: #4e8f2b; color: #fff;padding: 8px 15px;border: none; cursor: pointer; border-radius: 5px;">
+                            </form>
+                            <form th:method="POST" th:action="@{/library/deleteBook/{id}(id=${book.getId()})}" style="display: inline-block; padding-right: 20px;">
+                                <input type="submit" value="Delete" style="background-color: #d9534f; color: #fff;padding: 8px 15px;border: none; cursor: pointer;border-radius: 5px;">
+                            </form>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
 </main>
 <footer>
-    <p>&copy; 2023 My Website. All rights reserved.</p>
+    <p>&copy; 2023 Library Website. All rights reserved.</p>
 </footer>
 </body>
 </html>
